Commit has some bugs to work out

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
       <button type="submit" class="btn-success">Add to Result!</button>
     </form>
   </div>
-  </br> 
-  <div id="destinationResult" class="container second">
-    <p>output</p>
+  </br>
+  <div class="container second">
+    <div class="row">
+      <div class="col-3">Location</div>
+      <div class="col-3">Landmarks</div>
+      <div class="col-3">Season</div>
+      <div class="col-3">Notes</div>
+    </div>  
+    <div id="destinationResult">
+    </div>  
+    
   </div>
 </body>
 </html>
